<resources>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_yes">yes</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_info">Info</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="app_name">Chronote</string>
    <string name="buttons_welcome">Make timed notes</string>
    <string name="button_1">new topic</string>
    <string name="button_2">see all topics</string>
    <string name="see_all_logs">SEE ALL TOPICS</string>
    <string name="to_chronometer">chronometer</string>
    <string name="delete_logs">Remove all topics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_placeholder">placeholder</string>
    <string name="loading_title">loading title</string>
    <string name="loading_date">loading date</string>
    <string name="loading_note_count">loading note count</string>
    <string name="tag">tag</string>
    <string name="newTopic">new topic</string>
    <string name="addTopic">add topic</string>
    <string name="new_topic_description">add a new topic</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="topic_descriptionp">this is a topic description</string>
    <string name="default_topic_name">a topic name</string>
    <string name="topic_title">The Title of a Topic</string>
    <string name="default_date_modified">Updated on July 23, 2019</string>


    <string name="fragment_list">List Fragment</string>
    <string name="fragment_detail">Detail Fragment</string>

    <string name="there_s_nothing_here">There\'s nothing here!</string>

    <string name="topic_image">Topic image</string>
</resources>