<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tags_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"
                />
        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_topic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/loading_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_topic_date_modified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:textColor="@color/black"
            android:text="@string/loading_date" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_topic_note_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:textColor="@color/black"
            android:text="@string/loading_note_count" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
