<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_element_container"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tags_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/chip.style">

        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_topic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"

            android:textSize="19sp"
            android:text="@string/loading_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_topic_date_modified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey5"
            android:textSize="15sp"
            android:text="@string/loading_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_topic_note_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/grey5"
            android:textSize="13sp"
            android:text="@string/loading_note_count" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
